<resources>
    <string name="app_name">CO-Defender</string>
    <string name="email_hint">Email</string>
    <string name="email_label">Email</string>
    <string name="username_hint">Username</string>
    <string name="username_label">Username</string>
    <string name="password_hint">Password</string>
    <string name="password_label">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="forgot_password_button">Forgot Password</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="first_name_label">First Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="date_of_birth_label">Date of Birth</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="city_label">City</string>
    <string name="city_hint">City</string>
    <string name="phone_label">Phone</string>
    <string name="phone_hint">Phone</string>

    <string name="questionnaire_label">Please fill out the questionnaire</string>
    <string name="covid_positive_question">Have you tested positive for COVID?</string>
    <string name="covid_exposed_question">Have you been exposed to COVID?</string>
    <string name="symptoms_label">Symptoms</string>
    <string name="fever_symptom">Fever</string>
    <string name="headache_symptom">Headache</string>
    <string name="sore_throat_symptom">Sore Throat</string>
    <string name="nausea_symptom">Nausea</string>
    <string name="fatigue_symptom">Fatigue</string>
    <string name="other_symptoms_label">Describe other symptoms</string>
    <string name="other_symptoms_hint">Write other symptoms…</string>
    <string name="submit_button">Submit</string>
    <string name="self_report_label">Self Report</string>
    <string name="self_report_prompt">How are you feeling today?</string>
    <string name="self_report_unwell">Unwell</string>
    <string name="self_report_well">Well</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_checkins_label">Latest Check-Ins</string>
    <string name="title_home">Dashboard</string>
    <string name="title_map">Map</string>
    <string name="title_health">Health</string>

    <string name="latest_news_label">Latest News</string>
    <string name="favorite_destinations_label">Favourite Destinations</string>
    <string name="outbreak_updates_label">Outbreak Updates</string>
    <string name="title_resources">Resources</string>
    <string name="logout">Logout</string>

</resources>