<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblUsername"
        android:hint="@string/username_label"
        android:layout_marginHorizontal="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lblUsername"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/txtUsername"
        android:textColor="#000000"
        android:background="@drawable/textbox_background"
        android:hint="@string/username_hint"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblPassword"
        android:layout_below="@id/txtUsername"
        android:text="@string/password_label"
        android:layout_marginHorizontal="10dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lblPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/txtPassword"
        android:background="@drawable/textbox_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblFirstName"
        android:layout_below="@id/txtPassword"
        android:hint="@string/first_name_label"
        android:layout_marginHorizontal="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lblFirstName"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/txtFirstName"
        android:background="@drawable/textbox_background"
        android:hint="@string/first_name_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblLastName"
        android:hint="@string/first_name_label"
        android:layout_below="@id/txtFirstName"
        android:layout_marginHorizontal="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lblLastName"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/txtLastName"
        android:background="@drawable/textbox_background"
        android:hint="@string/last_name_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblDOB"
        android:hint="@string/date_of_birth_label"
        android:layout_below="@id/txtLastName"
        android:layout_marginHorizontal="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lblDOB"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/txtDOB"
        android:textColor="#000000"
        android:inputType="date"
        android:background="@drawable/textbox_background"
        android:hint="@string/date_of_birth_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblCity"
        android:hint="@string/city_label"
        android:layout_below="@id/txtDOB"
        android:layout_marginHorizontal="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lblCity"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/txtCity"
        android:background="@drawable/textbox_background"
        android:hint="@string/city_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblPhone"
        android:hint="@string/phone_label"
        android:layout_below="@id/txtCity"
        android:layout_marginHorizontal="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lblPhone"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="#000000"
        android:id="@+id/txtPhone"
        android:inputType="phone"
        android:background="@drawable/textbox_background"
        android:hint="@string/phone_hint"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPhone"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:background="@android:color/black"
        android:text="@string/register_button"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_marginTop="23dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblLogin"
        android:layout_below="@id/btnRegister"
        android:text=""
        android:layout_marginHorizontal="10dp"
        android:textAlignment="center"
        android:linksClickable="true"
        android:clickable="true"
        android:focusable="true"
        android:textColorLink="@color/link"
        />

</RelativeLayout>