<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.newsapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.newsapplication.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_health"
        android:name="com.example.newsapplication.HealthStatusFragment"
        android:label="@string/title_health"
        tools:layout="@layout/fragment_health_status" />

    <fragment
        android:id="@+id/navigation_resource"
        android:name="com.example.newsapplication.ResourceFragment"
        android:label="Resources"
        tools:layout="@layout/fragment_resource" >


    </fragment>
</navigation>