<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idToolbar"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:padding="4dp"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="15dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_co_shield_foreground"
        android:layout_below="@id/idToolbar"
        android:layout_centerInParent="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblUsername"
        android:layout_below="@id/appIcon"
        android:text="@string/username_label"
        android:textColor="#000000"
        android:layout_marginHorizontal="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lblUsername"
        android:padding="10dp"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/txtUsername"
        android:background="@drawable/textbox_background"
        android:hint="@string/username_hint"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblPassword"
        android:layout_below="@id/txtUsername"
        android:text="@string/password_label"
        android:textColor="#000000"
        android:layout_marginHorizontal="10dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lblPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/txtPassword"
        android:background="@drawable/textbox_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="6dp"
        android:text="@string/login_button"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_marginTop="23dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblRegister"
        android:layout_below="@id/btnLogin"
        android:text="Don't have a username? Click here to register."
        android:layout_marginHorizontal="10dp"
        android:textAlignment="center"
        android:linksClickable="true"
        android:clickable="true"
        android:focusable="true"
        android:textColorLink="@color/link"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblForgotPassword"
        android:layout_below="@id/lblRegister"
        android:text="@string/forgot_password_label"
        android:layout_marginHorizontal="10dp"
        android:textAlignment="center"
        android:linksClickable="true"
        android:clickable="true"
        android:focusable="true"
        android:textColorLink="@color/link"
        />

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/idRVCategories"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/idToolbar"-->
<!--        tools:listitem="@layout/categories_rv_item"-->
<!--        android:orientation="horizontal"-->
<!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />-->
<!--
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVNews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/idToolbar"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/news_rv_item"
        />
<ProgressBar
    android:id="@+id/idPBLoading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:visibility="gone" />
    -->

</RelativeLayout>