<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblEmail"
        android:hint="@string/email_label"
        android:layout_marginHorizontal="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lblEmail"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/txtEmail"
        android:background="@drawable/textbox_background"
        android:hint="@string/email_hint"
        />

    <Button
        android:id="@+id/btnForgotPassowrd"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/txtEmail"
        android:layout_alignParentEnd="true"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="@string/forgot_password_button" />

    <TextView
        android:layout_marginTop="23dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/lblLogin"
        android:layout_below="@id/btnForgotPassowrd"
        android:text=""
        android:layout_marginHorizontal="10dp"
        android:textAlignment="center"
        android:linksClickable="true"
        android:clickable="true"
        android:focusable="true"
        android:textColorLink="@color/link"
        />

</RelativeLayout>